--- a/src/sample/GuestMenu/GuestMenuHome.fxml
+++ b/src/sample/GuestMenu/GuestMenuHome.fxml
@@ -6,79 +6,74 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
 
-<GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" vgap="5.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GuestMenu.GuestMenuHomeController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0fae21" height="200.0" stroke="BLACK" strokeType="INSIDE" width="600.0">
-         <GridPane.margin>
-            <Insets top="500.0" />
-         </GridPane.margin></Rectangle>
-      <Pane style="-fx-border-color: black;" GridPane.rowIndex="2">
-         <children>
+
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GuestMenu.GuestMenuHomeController">
+  <children>
+    <ImageView fitHeight="445.0" fitWidth="600.0" pickOnBounds="true">
+      <image>
+        <Image url="@../Pictures/rubylogo-e1489090066133.jpg" />
+      </image>
+    </ImageView>
+    <GridPane hgap="5.0" layoutY="18.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" vgap="5.0">
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+      <children>
+        <ImageView fx:id="imageView1" accessibleText="ImageHere" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+          <image>
+            <Image url="@../Pictures/sunset-pool_1203-3192.jpg" />
+          </image>
+        </ImageView>
+        <Pane style="-fx-border-color: black;" GridPane.rowIndex="2">
+          <children>
             <Button fx:id="buttonBookRoom" mnemonicParsing="false" onAction="#handleBookRoom" prefHeight="100.0" prefWidth="201.0" text="Book Room" />
             <Text layoutX="5.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View our variety of room and book one you like." textAlignment="CENTER" wrappingWidth="199.748046875" />
-         </children>
-      </Pane>
-      <Pane styleClass="pane" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <children>
+          </children>
+        </Pane>
+        <Pane styleClass="pane" GridPane.columnIndex="2" GridPane.rowIndex="2">
+          <children>
             <Button fx:id="buttonEvent" mnemonicParsing="false" onAction="#handleEventButton" prefHeight="100.0" prefWidth="200.0" text="View Events" />
             <Text layoutX="1.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View our extravagent events. You can create your own too." textAlignment="CENTER" wrappingWidth="198.271484375" />
-         </children>
-      </Pane>
-      <Pane styleClass="pane" GridPane.columnIndex="2" GridPane.rowIndex="2">
-         <children>
-            <Button fx:id="buttonCalender" mnemonicParsing="false" onAction="#handleCalender" prefHeight="100.0" prefWidth="201.0" text="(Delete)" />
-            <Text layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="See our Event Calender and set up Notications! (Not Happening)" textAlignment="CENTER" wrappingWidth="200.525390625" />
-         </children>
-      </Pane>
-      <Pane styleClass="pane" GridPane.rowIndex="3">
-         <GridPane.margin>
+          </children>
+        </Pane>
+        <Pane styleClass="pane" GridPane.rowIndex="3">
+          <GridPane.margin>
             <Insets />
-         </GridPane.margin>
-         <children>
+          </GridPane.margin>
+          <children>
             <Button fx:id="buttonSettings" mnemonicParsing="false" onAction="#handleSettings" prefHeight="100.0" prefWidth="200.0" text="Account Settings" textAlignment="CENTER">
-               <padding>
-                  <Insets top="10.0" />
-               </padding>
+              <padding>
+                <Insets top="10.0" />
+              </padding>
             </Button>
             <Text layoutX="14.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View Account settings and history. Edit Account details." textAlignment="CENTER" wrappingWidth="177.185546875" />
-         </children>
-      </Pane>
-      <Pane styleClass="pane" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <children>
-            <Button fx:id="buttonAccount" mnemonicParsing="false" onAction="#handleAccount" prefHeight="100.0" prefWidth="198.0" text="(Delete)" />
-            <Text layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View alerts, Purchase History and more." textAlignment="CENTER" wrappingWidth="200.13671875" />
-         </children>
-      </Pane>
-      <Pane styleClass="pane" GridPane.columnIndex="2" GridPane.rowIndex="3">
-         <children>
-            <Button fx:id="buttonExit" mnemonicParsing="false" onAction="#handleExit" prefHeight="100.0" prefWidth="200.0" text="Logout" />
-         </children>
-      </Pane>
-      <ImageView fx:id="imageView1" accessibleText="ImageHere" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-         <image>
-            <Image url="@../Pictures/sunset-pool_1203-3192.jpg" />
-         </image></ImageView>
-      <Label layoutY="30.0" text="Welcome, what would you to do?" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-   </children>
-  <stylesheets>
-    <URL value="@HomeStyleSheet.css" />
-  </stylesheets>
-</GridPane>
+          </children>
+        </Pane>
+        <Pane styleClass="pane" GridPane.columnIndex="2" GridPane.rowIndex="3">
+          <children>
+            <Button fx:id="buttonExit" layoutX="-2.0" layoutY="-2.0" mnemonicParsing="false" onAction="#handleExit" prefHeight="100.0" prefWidth="200.0" text="Logout" />
+          </children>
+        </Pane>
+        <Label layoutY="30.0" text="Welcome, what would you to do?" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      </children>
+      <stylesheets>
+        <URL value="@HomeStyleSheet.css" />
+      </stylesheets>
+    </GridPane>
+  </children>
+</AnchorPane>
