--- a/src/sample/LoginMenu/LoginMenu.fxml
+++ b/src/sample/LoginMenu/LoginMenu.fxml
@@ -46,7 +46,7 @@
                               <Image url="@../Pictures/ruby-on-rails.png" />
                            </image>
                         </ImageView>
-                        <Button fx:id="buttonCreate" layoutX="236.0" layoutY="251.0" mnemonicParsing="false" onAction="#handleButtonCreate" opacity="0.0" prefHeight="32.0" prefWidth="44.0" style="-fx-shape: &quot;M 350 400 L 200 250 L 250 200 L 450 200 L 500 250 L 350 400 &quot;;" text="Create" />
+                        <Button id="img_only" fx:id="buttonCreate" layoutX="236.0" layoutY="251.0" mnemonicParsing="false" onAction="#handleButtonCreate" opacity="0.0" prefHeight="32.0" prefWidth="44.0" style="-fx-shape: &quot;M 350 400 L 200 250 L 250 200 L 450 200 L 500 250 L 350 400 &quot;;" text="Create" />
                      </children>
                   </AnchorPane>
             </content>
